tests/ui/cast/issue-112630.stderr
error[E0412]: cannot find type `B` in this scope
  --> $DIR/issue-112630.rs:2:9
   |
LL |     Bar(B),
   |         ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | enum Foo<B> {
   |         +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
